force-app/main/default/objects/BrillioFC__Field_Detail__c/BrillioFC__Field_Detail__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Unused Field Detail</label>
    <nameField>
        <label>ForceClinic Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Unused Field Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>