force-app/main/default/objects/BrillioFC__Field_Detail__c/fields/BrillioFC__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Data_Type__c</fullName>
    <label>Data Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>