force-app/main/default/objects/BrillioFC__Field_Detail__c/fields/BrillioFC__External_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__External_Field_Name__c</fullName>
    <label>External Field Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>