force-app/main/default/objects/BrillioFC__Field_Detail__c/fields/BrillioFC__Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>