force-app/main/default/objects/BrillioFC__Field_Detail__c/fields/BrillioFC__IsCustomField__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__IsCustomField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Custom Field</label>
    <type>Checkbox</type>
</CustomField>