force-app/main/default/objects/BrillioFC__Field_Detail__c/fields/BrillioFC__Object_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Detail__c</fullName>
    <label>ForceClinic Object Detail</label>
    <referenceTo>BrillioFC__Object_Detail__c</referenceTo>
    <relationshipName>Field_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>