force-app/main/default/objects/BrillioFC__Field_Detail__c/fields/BrillioFC__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Object_Name__c</fullName>
    <formula>BrillioFC__Object_Detail__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Name</label>
    <type>Text</type>
</CustomField>